# l1cefr-cond-public

./: LICENSE  README.md  pyproject.toml
domain/: __init__.py  adapter.py  cefr.py  cell.py  l1.py  method.py
l1cefr_cond/: __init__.py  config.py  eval.py  train.py
l1cefr_cond/lmhead/: __init__.py  additive_bias_mlp.py  bilinear_interaction.py  ckpt_upload.py  data.py  film.py  finalize.py  gated_suppression.py  gen_health.py  grid.py  lora_delta.py  plotting.py  runner.py
l1cefr_cond/nb/: __init__.py  brokers.py  colab.py  nbenv.py  registry.py
